--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <div class="grid-1-3"></div>
         </header>
         <div class="flex-content float-xs-12">
-            <div class="flex-xs-5"></div>
+            <div class="flex-xs-4"></div>
             <section class="sections-style flex-xs-14 text-center">
                 <h1 class="line-1">What will your verse be?</h1>
-                <h1 class="line-n">Everyone has something to share. See how people are using</h1> 
-                <h1 class="line-n">iPad in their unique ways to add to the world's story.</h1>
+                <h1 class="line-n motivational1">Everyone has something to share. See how people are using</h1> 
+                <h1 class="line-n motivational2">iPad in their unique ways to add to the world's story.</h1>
                 <h1 class="line-n">Watch the "your verse" film and explore their stories</h1>
             </section>
-            <div class="flex-xs-5"></div>
+            <div class="flex-xs-4"></div>
         </div>
     </div>
     
@@ -61,7 +61,7 @@
     </div>
     <footer class="grid-footer float-xs-12">
         <div class="grid-1-2"><span>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</span></div>
-        <div  class="grid-1-3"><span class="links-margin"><a href="#">Site Map</a> | <a href="#">Hot News</a> | <a href="#">RSS Feeds</a> | <a href="#">Media Info</a> | <a href="#">Environment</a> | <a href="#">Job Opportunities</a> | <a href="#">Contact us</a> |</span> <img src="usa.png"></div>
+        <div  class="grid-1-3 grid-with-usa"><span class=" grid-1-1 links-margin"><a href="#">Site Map</a> | <a href="#">Hot News</a> | <a href="#">RSS Feeds</a> | <a href="#">Media Info</a> | <a href="#">Environment</a> | <a href="#">Job Opportunities</a> | <a href="#">Contact us</a> |</span><img class=" grid-1-2 usa-image" src="usa.png"></div>
         <div  class="grid-2-2"><span>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></span></div>
     </footer>
 </body>
