--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1 class="line-1">What will your verse be?</h1>
                 <h1 class="line-n motivational1">Everyone has something to share. See how people are using</h1> 
                 <h1 class="line-n motivational2">iPad in their unique ways to add to the world's story.</h1>
-                <h1 class="line-n">Watch the "your verse" film and explore their stories</h1>
+                <h1 class="line-n"><span class="grid-1-2">Watch the "your verse" film and explore their stories </span><img class=" grid-1-3 icon-play" src="play-icon.png"></h1>
             </section>
             <div class="flex-xs-4"></div>
         </div>
