move all images to a folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="header-style">
             <div class="grid-1-1"></div>
             <nav class="grid-1-2 grid-navbar">
-                <div  class="grid-1-1 item-left div-menu"><img alt="apple-image" class="apple-image" src="apple-logo.svg.png"></div>
+                <div  class="grid-1-1 item-left div-menu"><img alt="apple-image" class="apple-image" src="images/apple-logo.svg.png"></div>
                 <div class="grid-1-2 div-menu"><a>Store</a></div>
                 <div class="grid-1-3 div-menu"><a>Mac</a></div>
                 <div class="grid-1-4 div-menu"><a>iPhone</a></div>
@@ -39,7 +39,7 @@
                 <h1 class="line-1">What will your verse be?</h1>
                 <h1 class="line-n motivational1">Everyone has something to share. See how people are using</h1> 
                 <h1 class="line-n motivational2">iPad in their unique ways to add to the world's story.</h1>
-                <h1 class="line-n"><span class="grid-1-2">Watch the "your verse" film and explore their stories </span><img class=" grid-1-3 icon-play" src="play-icon.png"></h1>
+                <h1 class="line-n"><span class="grid-1-2">Watch the "your verse" film and explore their stories </span><img class=" grid-1-3 icon-play" src="images/play-icon.png"></h1>
             </section>
             <div class="flex-xs-4"></div>
         </div>
@@ -47,21 +47,21 @@
     
     <div class="float-xs-12 images">
         <div class="float-xs-3">
-            <img src="iphone5s.jpg" width="364" height="200" alt="iPhone 5s. Forward thinking.">
+            <img src="images/iphone5s.jpg" width="364" height="200" alt="iPhone 5s. Forward thinking.">
         </div>
         <div class="float-xs-3">
-            <img src="iphone5s2.jpg" width="364" height="200" alt="iPhone 5c. For the colorful.">
+            <img src="images/iphone5s2.jpg" width="364" height="200" alt="iPhone 5c. For the colorful.">
         </div>
         <div class="float-xs-3">
-            <img src="promo-30-years.jpg" width="364" height="200" alt="Happy Birthday, Mac. Explore 30 years of innovation on the Mac.">
+            <img src="images/promo-30-years.jpg" width="364" height="200" alt="Happy Birthday, Mac. Explore 30 years of innovation on the Mac.">
         </div>
         <div class="float-xs-3">
-            <img src="promo-supplier.jpg" width="364" height="200" alt="Supplier Responsibility The latest results of our worldwide efforts.">
+            <img src="images/promo-supplier.jpg" width="364" height="200" alt="Supplier Responsibility The latest results of our worldwide efforts.">
         </div>
     </div>
     <footer class="grid-footer float-xs-12">
         <div class="grid-1-2"><span>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</span></div>
-        <div  class="grid-1-3 grid-with-usa"><span class=" grid-1-1 links-margin"><a href="#">Site Map</a> | <a href="#">Hot News</a> | <a href="#">RSS Feeds</a> | <a href="#">Media Info</a> | <a href="#">Environment</a> | <a href="#">Job Opportunities</a> | <a href="#">Contact us</a> |</span><img class=" grid-1-2 usa-image" src="usa.png"></div>
+        <div  class="grid-1-3 grid-with-usa"><span class=" grid-1-1 links-margin"><a href="#">Site Map</a> | <a href="#">Hot News</a> | <a href="#">RSS Feeds</a> | <a href="#">Media Info</a> | <a href="#">Environment</a> | <a href="#">Job Opportunities</a> | <a href="#">Contact us</a> |</span><img class=" grid-1-2 usa-image" src="images/usa.png"></div>
         <div  class="grid-2-2"><span>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></span></div>
     </footer>
 </body>
