--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="grid-1-7 div-menu"><a>iTunes</a></div>
                 <div class="grid-1-8 div-menu"><a>Support</a></div>
                 <div class="grid-1-9 item-right div-menu">
-                    <input class="search-input" type="text"></input>
+                    <input class="search-input" type="text"/>
                     <svg class="menu-icon" viewBox="0 0 16 16">
                         <path fill="white"
                           d="M11.3,9.2C11.7,8.4,12,7.5,12,6.5C12,3.5,9.5,1,6.5,1S1,3.5,1,6.5S3.5,12,6.5,12c1,0,1.9-0.3,2.7-0.7l3.3,3.3c0.3,0.3,0.7,0.4,1.1,0.4s0.8-0.1,1.1-0.4c0.6-0.6,0.6-1.5,0-2.1L11.3,9.2zM6.5,10.3c-2.1,0-3.8-1.7-3.8-3.8c0-2.1,1.7-3.8,3.8-3.8c2.1,0,3.8,1.7,3.8,3.8C10.3,8.6,8.6,10.3,6.5,10.3z">
@@ -40,7 +40,7 @@
                 <h1 class="line-1">What will your verse be?</h1>
                 <h1 class="line-n motivational1">Everyone has something to share. See how people are using</h1> 
                 <h1 class="line-n motivational2">iPad in their unique ways to add to the world's story.</h1>
-                <h1 class="line-n"><span class="grid-1-2">Watch the "your verse" film and explore their stories </span><img class=" grid-1-3 icon-play" src="images/play-icon.png"></h1>
+                <h1 class="line-n"><span class="grid-1-2">Watch the "your verse" film and explore their stories </span><img class=" grid-1-3 icon-play" alt="play-icon" src="images/play-icon.png"></h1>
             </section>
             <div class="flex-xs-4"></div>
         </div>
@@ -62,7 +62,7 @@
     </div>
     <footer class="grid-footer float-xs-12">
         <div class="grid-1-2"><span>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</span></div>
-        <div  class="grid-1-3 grid-with-usa"><span class=" grid-1-1 links-margin"><a href="#">Site Map</a> | <a href="#">Hot News</a> | <a href="#">RSS Feeds</a> | <a href="#">Media Info</a> | <a href="#">Environment</a> | <a href="#">Job Opportunities</a> | <a href="#">Contact us</a> |</span><img class=" grid-1-2 usa-image" src="images/usa.png"></div>
+        <div  class="grid-1-3 grid-with-usa"><span class=" grid-1-1 links-margin"><a href="#">Site Map</a> | <a href="#">Hot News</a> | <a href="#">RSS Feeds</a> | <a href="#">Media Info</a> | <a href="#">Environment</a> | <a href="#">Job Opportunities</a> | <a href="#">Contact us</a> |</span><img class=" grid-1-2 usa-image" alt="usa-flag" src="images/usa.png"></div>
         <div  class="grid-2-2"><span>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></span></div>
     </footer>
 </body>
