change images size

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     
     <div class="float-xs-12 images">
         <div class="float-xs-3">
-            <img src="images/iphone5s.jpg" width="364" height="200" alt="iPhone 5s. Forward thinking.">
+            <img src="images/iphone5s.jpg"  alt="iPhone 5s. Forward thinking.">
         </div>
         <div class="float-xs-3">
-            <img src="images/iphone5s2.jpg" width="364" height="200" alt="iPhone 5c. For the colorful.">
+            <img src="images/iphone5s2.jpg" alt="iPhone 5c. For the colorful.">
         </div>
         <div class="float-xs-3">
-            <img src="images/promo-30-years.jpg" width="364" height="200" alt="Happy Birthday, Mac. Explore 30 years of innovation on the Mac.">
+            <img src="images/promo-30-years.jpg" alt="Happy Birthday, Mac. Explore 30 years of innovation on the Mac.">
         </div>
         <div class="float-xs-3">
-            <img src="images/promo-supplier.jpg" width="364" height="200" alt="Supplier Responsibility The latest results of our worldwide efforts.">
+            <img src="images/promo-supplier.jpg"  alt="Supplier Responsibility The latest results of our worldwide efforts.">
         </div>
     </div>
     <footer class="grid-footer float-xs-12">
