convert images in links

--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
     </div>
     
     <div class="float-xs-12 images">
-        <div class="float-xs-3">
-            <img src="images/iphone5s.jpg"  alt="iPhone 5s. Forward thinking.">
-        </div>
-        <div class="float-xs-3">
+        <a class="float-xs-3" href="#">
+            <img src="images/iphone5s.jpg" alt="iPhone 5s. Forward thinking.">
+        </a>
+        <a class="float-xs-3" href="#">
             <img src="images/iphone5s2.jpg" alt="iPhone 5c. For the colorful.">
-        </div>
-        <div class="float-xs-3">
+        </a>
+        <a class="float-xs-3" href="#">
             <img src="images/promo-30-years.jpg" alt="Happy Birthday, Mac. Explore 30 years of innovation on the Mac.">
-        </div>
-        <div class="float-xs-3">
+        </a>
+        <a class="float-xs-3" href="#">
             <img src="images/promo-supplier.jpg"  alt="Supplier Responsibility The latest results of our worldwide efforts.">
-        </div>
+        </a>
     </div>
     <footer class="grid-footer float-xs-12">
         <div class="grid-1-2"><span>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</span></div>
